Se me olvidaron uans comillas ylas elimine

--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="card">
             <div class="imgPet">
-                <img src="./tobbytoElPillo.jpg"" alt="Descripción de la imagen">
+                <img src="./tobbytoElPillo.jpg" alt="Imagen de una mascota feliz">
             </div>
             <div class="category">
                 <h2 class="tag">DOG</h2>
